<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hashcode</groupId>
    <artifactId>hashcode</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <description>Our solutions to some rounds of the Google Hash Code competition.</description>
    <url>https://github.com/alessandrodalbello/google-hash-code</url>

    <modules>
        <module>api</module>
        <module>practice-2020</module>
        <module>qualification-2020</module>
    </modules>

    <issueManagement>
        <url>https://github.com/alessandrodalbello/google-hash-code/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Alessandro Dal Bello</name>
            <email>alessandro.dalbello@gmail.com</email>
        </developer>
        <developer>
            <name>Luca Capitoli</name>
            <email>luca.capitoli@gmail.com</email>
        </developer>
        <developer>
            <name>Riccardo Leschiutta</name>
            <email>leschiutta.ricc@gmail.com</email>
        </developer>
        <developer>
            <name>Stefano De Giorgio</name>
            <email>degio.ste@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/alessandrodalbello/google-hash-code</url>
        <connection>scm:git:git@github.com:alessandrodalbello/google-hash-code.git</connection>
        <developerConnection>scm:git:git@github.com:alessandrodalbello/google-hash-code.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Maven compiler -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- Application dependencies -->
        <guava.version>30.1-jre</guava.version>

        <!-- Maven plugins -->
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Application dependencies -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
